--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <section>
+  <video src="assets/video/rickrolled.mp4"></video>
+  <section class="tekst">
     <a href="#frontend">Frontend</a>
     <a href="#design">Design</a>
     <div id=and>&</div>
@@ -32,6 +33,26 @@
     <a href="#states">States</a>
     <a href="#navigation">Navigation</a>
     <a href="#code">Code</a>
+  </section>
+
+
+  <section class="sectioncolor tekst">
+    <div class="kleuren">
+      <button onclick="whitekleur()" class="white"></button>
+      <button onclick="magentakleur()" class="magenta"></button>
+      <button onclick="hotpinkkleur()" class="hotpink"></button>
+      <button onclick="redkleur()" class="red"></button>
+      <button onclick="orangekleur()" class="orange"></button>
+      <button onclick="yellowkleur()" class="yellow"></button>
+      <button onclick="limekleur()" class="lime"></button>
+      <button onclick="greenkleur()" class="green"></button>
+      <button onclick="turquoisekleur()" class="turquoise"></button>
+      <button onclick="cyankleur()" class="cyan"></button>
+      <button onclick="bluekleur()" class="blue"></button>
+      <button onclick="darkbluekleur()" class="darkblue"></button>
+      <button onclick="purplekleur()" class="purple"></button>
+      <button onclick="blackkleur()" class="black"></button>
+    </div>
   </section>
 </body>
 
