--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <video src="assets/video/rickrolled.mp4"></video>
+  <img class="SuperWOUT" src="assets/WOUT THE GOAT.jpg" alt="Wout the GOAT">
   <section class="tekst">
     <a href="#frontend">Frontend</a>
     <a href="#design">Design</a>
